# Projet/swagger/swagger.yaml
@@ -169,6 +169,60 @@ paths:
           description: 'Invalid input'
         '500':
           description: 'Internal server Error. Please contact us'
+  '/medecins/removePatient/{idPatient}':
+    put:
+      tags:
+        - Medecin
+      summary: 'Remove Patient from Medecin'
+      description: 'Remove Patient from Medecin'
+      operationId: 'App\Controller\MedecinRestController::removePatient'
+      parameters:
+        -
+          name: idPatient
+          in: path
+          description: 'ID of patient to return'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: 'Successful operation, Patient of Medecin remove'
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'If no Patient found'
+        '500':
+          description: 'Internal server Error. Please contact us'
+  '/medecins/rdv/{id}':
+    get:
+      tags:
+        - Medecin
+      summary: 'Return a list of rendezVousDTO from MedecinDTO'
+      description: 'Return a list of rendezVousDTO from MedecinDTO'
+      operationId: 'App\Controller\MedecinRestController::searchRendezVous'
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID of medecin to return'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RendezVousDTO'
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'If no MedecinDTO found'
+        '500':
+          description: 'Internal server Error. Please contact us'
   /patients:
     post:
       tags:
@@ -184,6 +238,34 @@ paths:
         '500':
           description: 'Internal server Error. Please contact us'
   '/patients/{id}':
+    get:
+      tags:
+        - Patient
+      summary: 'Search a PatientDTO by ID'
+      description: 'Search a PatientDTO by ID'
+      operationId: 'App\Controller\PatientRestController::searchById'
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID of patient to return'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PatientDTO'
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'If no PatientDTO found'
+        '500':
+          description: 'Internal server Error. Please contact us'
     put:
       tags:
         - Patient
@@ -234,13 +316,38 @@ paths:
           description: 'If no PatientDTO found'
         '500':
           description: 'Internal server Error. Please contact us'
-  '/Patients/{id}':
+  '/patients/removeMedecin/{idMedecin}':
+    put:
+      tags:
+        - Patient
+      summary: 'Remove Medecin from Patient'
+      description: 'Remove Medecin from Patient'
+      operationId: 'App\Controller\PatientRestController::removeMedecin'
+      parameters:
+        -
+          name: idMedecin
+          in: path
+          description: 'ID of Medecin to return'
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: 'Successful operation, Medecin of Patient remove'
+        '400':
+          description: 'Invalid ID supplied'
+        '404':
+          description: 'If no Medecin found'
+        '500':
+          description: 'Internal server Error. Please contact us'
+  '/patients/rdv/{id}':
     get:
       tags:
         - Patient
-      summary: 'Search a PatientDTO by ID'
-      description: 'Search a PatientDTO by ID'
-      operationId: 'App\Controller\PatientRestController::searchById'
+      summary: 'Return a list of rendezVousDTO from PatientDTO'
+      description: 'Return a list of rendezVousDTO from PatientDTO'
+      operationId: 'App\Controller\PatientRestController::searchRendezVous'
       parameters:
         -
           name: id
@@ -256,7 +363,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PatientDTO'
+                $ref: '#/components/schemas/RendezVousDTO'
         '400':
           description: 'Invalid ID supplied'
         '404':
